--- a/react-query/src/App.css
+++ b/react-query/src/App.css
@@ -17,6 +17,13 @@ body {
   padding: 10px;
 }
 
+.post > span {
+  background: #cacaca;
+  padding: 2px 8px 4px 8px;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
 .title {
   font-weight: 800;
   font-size: 30px;
