--- a/react-query/src/App.css
+++ b/react-query/src/App.css
@@ -2,16 +2,53 @@ body {
   font-family: sans-serif;
 }
 
+.title {
+  font-weight: 800;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
+.container > form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.container > form > button {
+  cursor: pointer;
+  padding: 8px;
+  font-size: 15px;
+  border: none;
+  background-color: rgb(37, 37, 37);
+  text-transform: uppercase;
+  color: white;
+  border-radius: 5px;
+}
+
+.postbox {
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  border-bottom: 2px solid grey;
+}
+
+.tags {
+  display: flex;
+  justify-content: space-around;
+}
+
 .post {
   display: flex;
   align-items: center;
-  gap:5;
+  gap: 5;
   background-color: #f2f3f2;
   border-radius: 5px;
   padding: 10px;
@@ -24,9 +61,9 @@ body {
   margin-left: 10px;
 }
 
-.title {
-  font-weight: 800;
-  font-size: 30px;
-  text-transform: uppercase;
-  text-align: center;
+.pages {
+  justify-content: center;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
